[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/backgrounds/gradient.png" type="Texture" id=1]
[ext_resource path="res://assets/backgrounds/btnBG.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/menus/left.png" type="Texture" id=5]
[ext_resource path="res://assets/menus/right.png" type="Texture" id=6]
[ext_resource path="res://assets/menus/up.png" type="Texture" id=7]
[ext_resource path="res://assets/menus/mouse-left-click-png.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/titleFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://startScreen.gd" type="Script" id=10]
[ext_resource path="res://startBtn.gd" type="Script" id=11]
[ext_resource path="res://assets/sounds/menuS.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/menuBGS.wav" type="AudioStream" id=13]

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Mouse-left-click-png" type="Sprite" parent="."]
position = Vector2( 900, 551 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="startBtn" type="TextureButton" parent="."]
margin_left = 143.0
margin_top = 362.0
margin_right = 1423.0
margin_bottom = 1082.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 2 )
script = ExtResource( 11 )
scene_to_load = "res://mainScene.tscn"

[node name="RichTextLabel" type="RichTextLabel" parent="startBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.0
margin_top = -160.5
margin_right = 369.0
margin_bottom = 160.5
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
text = "Play"

[node name="quitBtn" type="TextureButton" parent="."]
margin_left = 143.0
margin_top = 453.0
margin_right = 1423.0
margin_bottom = 1173.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 2 )

[node name="RichTextLabel2" type="RichTextLabel" parent="quitBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -335.0
margin_top = -145.0
margin_right = 290.0
margin_bottom = 200.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="Left" type="Sprite" parent="."]
position = Vector2( 823, 449 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Right" type="Sprite" parent="."]
position = Vector2( 988, 449 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )

[node name="Up" type="Sprite" parent="."]
position = Vector2( 906, 368 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )

[node name="Jump" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 229.0
margin_top = -59.0
margin_right = 332.0
margin_bottom = -17.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Jump"

[node name="Walk Right" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 394.0
margin_top = 75.0
margin_right = 548.0
margin_bottom = 114.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Walk Left"

[node name="Walk Left" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = 72.0
margin_right = 161.0
margin_bottom = 113.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Walk Right"

[node name="Attack" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 229.0
margin_top = 240.0
margin_right = 407.0
margin_bottom = 281.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Attack"

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -513.0
margin_top = -292.0
margin_right = 489.0
margin_bottom = -91.0
custom_fonts/normal_font = ExtResource( 9 )
text = "Nightborne"

[node name="menuBgs" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="btnClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 20.0
